// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > mirroredModel > importModel > call Readable.fromWeb when res.body is not a Readable 1`] = `
{
  "importResult": {
    "fileIds": [],
    "imageIds": [],
    "modelCardVersions": [],
    "newModelCards": [],
    "newReleases": [],
    "releaseSemvers": [],
  },
  "mirroredModel": "updatedMirroredModel",
}
`;

exports[`services > mirroredModel > importModel > importCompressedRegistryImage on image success 1`] = `
{
  "importResult": {
    "image": {
      "imageName": "imageName",
      "imageTag": "imageTag",
      "modelId": "modelId",
    },
  },
  "mirroredModel": {
    "card": {
      "schemaId": "schemaId",
    },
    "settings": {
      "mirror": {
        "destinationModelId": "abc",
      },
    },
  },
}
`;

exports[`services > mirroredModel > importModel > importDocuments on document success 1`] = `
{
  "importResult": {
    "fileIds": [],
    "imageIds": [],
    "modelCardVersions": [],
    "newModelCards": [],
    "newReleases": [],
    "releaseSemvers": [],
  },
  "mirroredModel": "updatedMirroredModel",
}
`;

exports[`services > mirroredModel > importModel > importModelFile on file success 1`] = `
{
  "importResult": {
    "newPath": "/new/path",
    "sourcePath": "/source/path",
  },
  "mirroredModel": {
    "card": {
      "schemaId": "schemaId",
    },
    "settings": {
      "mirror": {
        "destinationModelId": "abc",
      },
    },
  },
}
`;
